more progress on blog

--- a/src/posts/welcome-to-my-new-blog.mdx
+++ b/src/posts/welcome-to-my-new-blog.mdx
@@ -1,7 +1,8 @@
 import { ThemeToggle } from "../components/ThemeToggle";
 import { InteractiveContent } from "../components/InteractiveContent";
 
-# Welcome to my New Blog!
+export const title = "Welcome to my New Blog!";
+export const slug = "welcome-to-my-new-blog";
 
 This is an entirely new website built from the ground-up using many modern technologies and frameworks.
 In this post I'm going to dive into how it's built! I wrote this blog post over the course of
