--- a/src/posts/optional-chaining.mdx
+++ b/src/posts/optional-chaining.mdx
@@ -1,6 +1,10 @@
+import { BUCKET_URL } from "../util/r2.ts";
 export const title = "The Dangers of Optional Chaining Overuse";
 export const slug = "the-downside-of-optional-chaining-overuse";
 export const tags = ["javascript", "software"];
+export const description =
+  "Optional chaining is one of my favorite javascript operators (if such a thing exists), but it's best to avoid using it when not necessary.";
+export const cover = `${BUCKET_URL}/optional-chaining-cover.png`;
 
 Optional chaining is a pattern I rely on daily to write clear, maintainable, and stable code. Before I get into the risks of over-use, here's a quick refresher:
 
