add blurhash when loading

--- a/src/posts/apple-shortcuts-fitness.mdx
+++ b/src/posts/apple-shortcuts-fitness.mdx
@@ -5,8 +5,7 @@ export const title =
 export const description =
   "How I use Apple Shortcuts to complement my current fitness and health tracking tools";
 export const tags = ["fitness", "hobby"];
-import { BUCKET_URL } from "../util/r2.ts";
-export const cover = `${BUCKET_URL}/fitness-shortcuts-cover.png`;
+export const cover = "fitness-shortcuts-cover.png";
 
 I've written pretty extensively about [my connected fitness setup](https://keegandonley.com/blog/my-approach-to-connected-fitness "Connected Fitness"), [Oura ring](https://keegandonley.com/blog/oura-ring-generation-3-first-impressions "Oura Ring"), and [Apple Health integration](https://keegandonley.com/blog/my-connected-fitness-tools-part-2 "Fitness Update"), but what I didn't talk much about is some of the manual steps I have to take in my quest to log accurate data. I focus on trying to track as many things as possible - workouts and sleep of course, but also water I drink, medications I take, and nutrients I consume. A lot of this is a manual process, but I've started to build up some [Apple Shortcuts](https://support.apple.com/guide/shortcuts/welcome/ios "Shortcuts") to help me out.
 
