--- a/src/posts/welcome-to-my-new-blog.mdx
+++ b/src/posts/welcome-to-my-new-blog.mdx
@@ -3,6 +3,9 @@ import { InteractiveContent } from "../components/InteractiveContent";
 
 export const title = "Welcome to my New Blog!";
 export const slug = "welcome-to-my-new-blog";
+export const cover = "blog-launch-cover.png";
+export const description =
+  "After months of work, my new website is live and available to all!";
 
 This is an entirely new website built from the ground-up using many modern technologies and frameworks.
 In this post I'm going to dive into how it's built! I wrote this blog post over the course of
