add mechanism for injecting CSS variables

--- a/src/posts/welcome-to-my-new-blog.mdx
+++ b/src/posts/welcome-to-my-new-blog.mdx
@@ -28,7 +28,7 @@ I built quite a few unique components for this website! Let's take a look at som
 ### Theme Toggle
 
 <InteractiveContent>
-  <ThemeToggle example />
+  <ThemeToggle relative />
   
   Animated when switching between light and dark modes
 
