image shadow and sizing

--- a/src/posts/my-connected-fitness-tools-part-2.mdx
+++ b/src/posts/my-connected-fitness-tools-part-2.mdx
@@ -3,7 +3,7 @@ export const slug = "my-connected-fitness-tools-part-2";
 export const tags = ["fitness", "hobby"];
 export const description =
   "After a year of using my connected fitness tools, a second look at what's new and what I changed!";
-export const cover = "fitness-2-cover.png";
+export const cover = "fitness-2-cover.png?hideShadow";
 
 It's been nearly one year since I wrote [**"A Look Into My Connected Fitness Tools"**](https://keegandonley.com/blog/my-approach-to-connected-fitness "A Look Into My Connected Fitness Tools"), in which I talked in detail about the fitness tech I use and how it integrates into my life. It's been one of my most popular posts to date, however, a lot has changed since then! In this follow-up post, I'll explain what I'm doing differently now, what I learned, and some things that didn't work as well as I'd hoped!
 
@@ -21,7 +21,7 @@ Since my original write-up, I've replaced a few of my devices. I moved from the 
 
 I upgraded to this only around one month ago, so I'm still getting used to the new features, but so far it's been perfect for hiking. I went for a 3-mile hike the weekend I got the watch to take it for a spin. The battery life was a big draw for me, as well as the more accurate GPS and brighter screen for outdoor use. I also am pretty excited about the "night mode" where the watch face can turn red to protect night vision when stargazing, for example.
 
-![](fitness-2-post:image-1.png)
+![](fitness-2-post:image-1.png?hideShadow)
 
 More recently, I did a slightly longer hike at around 6 miles using the [WorkOutdoors app ](http://www.workoutdoors.net/ "WorkOutdoors")to test it out. The map view was nice, however, I missed some of the metrics that are displayed clearly and simply on Apple's own hiking workout tracking. Essentially, the Apple Watch Ultra is the perfect exercise tracker for hiking and camping for me - it's more powerful than the standard model, but still within the Apple ecosystem so all my existing apps and tools continue to work as expected.
 
@@ -31,7 +31,7 @@ I recently switched from the gen 2 to the gen 3 Oura ring. I wrote about [my fir
 
 Oura generation 3 added daytime heart rate tracking. I typically wore the ring all day and night, so this provided good coverage of my data throughout the day. Oura did a pretty good job of tracking restorative time during the day (in other words, when I'm not very active).
 
-![](fitness-2-post:image-2.png)
+![](fitness-2-post:image-2.png?hideShadow)
 
 However, due to the diamond-like-carbon (DLC) coating on the ring, it was scratching everything I touched - most notably my phone screen. I got a new iPhone around the same time I got my Apple Watch Ultra, so I stopped wearing the ring during the day. Now, most of the time I put my watch on the charger and put my ring on at night. This works fine because my Apple Watch and Oura Ring work in tandem to provide data coverage throughout the week, but this comes with pros and cons.
 
@@ -39,7 +39,7 @@ However, due to the diamond-like-carbon (DLC) coating on the ring, it was scratc
 
 I much prefer wearing my ring at night over my watch since it's more comfortable and less intrusive, so I expect to continue doing that for the foreseeable future. Most of the data I care the most about is available even without daytime wearing: sleep score, readiness score, and some part of my activity score (more on that below).
 
-![](fitness-2-post:image-3.png)
+![](fitness-2-post:image-3.png?hideShadow)
 
 A huge complaint I have about Apple's fitness ecosystem is that it doesn't account for rest days. The challenges get continually harder until they're nearly impossible to safely complete, and taking a day off ruins your streak. Oura has always taken a different approach, indicating in the morning how much I should push myself and setting the daily goals accordingly.
 
@@ -47,7 +47,7 @@ A huge complaint I have about Apple's fitness ecosystem is that it doesn't accou
 
 There is some data that Oura lacks now that I don't wear it all the time, and some reporting to Apple Health (which I treat as the "source of truth" for all my data) is not perfect.
 
-![](fitness-2-post:image-4.png)
+![](fitness-2-post:image-4.png?hideShadow)
 
 In the middle graphic above, you can see that Oura's heart rate monitoring is one-way. It will write data to Apple Health but does not read in any existing data from when the ring was off and a different device tracked the data. Further, even though Oura tracks sleep stages, they do not get written to Apple Health as they would if I was tracking sleep with my watch, so Apple only shows the time asleep with no more detail.
 
@@ -59,13 +59,13 @@ The Apple Watch now has robust sleep tracking built-in, including sleep stage de
 
 I do sometimes use my Apple Watch for sleep tracking. It's not as comfortable as the ring, but when I'm traveling it's often easier to just use the watch than bring my ring and charger (and risk losing it).
 
-![](fitness-2-post:image-5.png)
+![](fitness-2-post:image-5.png?hideShadow)
 
 You can see above the light blue color is the sleep data in Apple Health from Oura, without sleep stages, while the colorful banding indicating stages comes from my Apple Watch. This is something I assume Oura could fix, though they haven't announced plans to.
 
 Finally, Oura really shines in the "readiness" score. Rather than just health metrics, I can get insights into how I recovered while sleeping, and plan my exercise around that data. For example, at the time of writing this, I just finished a difficult hike yesterday and Oura is reminding me to take it easy today.
 
-![](fitness-2-post:image-6.png)
+![](fitness-2-post:image-6.png?hideShadow)
 
 At the end of the day, I plan to continue using both devices extensively as part of tracking my fitness and recovery. Hopefully, in time Oura's integration will become tighter, but even if not there is still a lot of value in the data.
 
@@ -85,7 +85,7 @@ Finally, I want to shout out a couple of new apps that I've been using to better
 
 This is a fantastic [app](https://apps.apple.com/app/workoutdoors/id1241909999?ls=1 "WorkOutDoors") for tracking workouts. It goes far beyond what Apple offers in terms of customizing the screen while tracking a workout, and you can track all sorts of different activities. Below I've included the results of that 6-mile hike I mentioned earlier, and that's just a small snippet of the data available.
 
-![](fitness-2-post:image-7.png)
+![](fitness-2-post:image-7.png?hideShadow)
 
 I did notice that once the workout was saved to the Apple Fitness app I was missing heart rate zone data, but that's fairly minor. I'm not yet sure if I set something up wrong or if the app needs to be updated to support this new feature.
 
@@ -93,7 +93,7 @@ I did notice that once the workout was saved to the Apple Fitness app I was miss
 
 I mentioned [HealthFit](https://apps.apple.com/us/app/healthfit/id1202650514 "Healthfit") last time I wrote about connected fitness, but they've made a number of updates and I started using the app a lot more for analysis. The app can use the [TSB](<https://fellrnr.com/wiki/Modeling_Human_Performance#:~:text=The%20TSB%20model%20when%20training,an%20improved%20performance%20(TSB).> "TSB") model to generate a nice graph and some of the sharing features are nice if I want to share a hike on social media or here on my blog.
 
-![](fitness-2-post:image-8.png)
+![](fitness-2-post:image-8.png?hideShadow)
 
 ## Final Thoughts
 
