--- a/src/posts/using-ai-to-generate-dall-e-2-prompts.mdx
+++ b/src/posts/using-ai-to-generate-dall-e-2-prompts.mdx
@@ -3,7 +3,7 @@ export const slug = "using-ai-to-generate-dall-e-2-prompts";
 export const tags = ["software", "ai", "DALL-E 2"];
 export const description =
   "Using ChatGPT to generate prompts that can be fed into DALL·E 2 to generate images";
-export const cover = "ai-generated-prompts-cover.png";
+export const cover = "ai-generated-prompts-cover.png?hideShadow";
 
 There's another exciting tool from [OpenAI](https://openai.com/ "OpenAI") out, and like DALL·E 2, I've been playing with this new one as well. It's called [ChatGPT](https://chat.openai.com/chat "ChatGPT") and is an AI system for chat dialog. After playing around with it for a while, I wanted to see if I could use it to generate [prompts for DALL·E 2](https://website-2-0-git-develop-kdonley.vercel.app/blog/a-quick-look-at-openai-dall-e-2 "DALL-E 2"). Here are the results!
 
@@ -11,33 +11,33 @@ There's another exciting tool from [OpenAI](https://openai.com/ "OpenAI") out, a
 
 First, I wanted to do something non-specific to see what ChatGPT would spit out. I went with "give me an amazing image generation prompt for dall-e 2"
 
-![Create an image of a futuristic cityscape, with towering skyscrapers, gleaming neon lights, and flying vehicles darting between the buildings. In the center of the city, there is a large, spherical building that serves as the hub of the city's transportation network. In the sky above the city, a massive holographic billboard displays a constantly changing array of advertisements and news.](dalle-post:image-1.png)
+![Create an image of a futuristic cityscape, with towering skyscrapers, gleaming neon lights, and flying vehicles darting between the buildings. In the center of the city, there is a large, spherical building that serves as the hub of the city's transportation network. In the sky above the city, a massive holographic billboard displays a constantly changing array of advertisements and news.](dalle-post:image-1.png?hideShadow?hideShadow)
 
 The prompt wasn't perfectly formatted for DALL·E 2, so I removed the first few words and had a workable prompt! Here are the results:
 
-![](dalle-post:image-2.png)
+![](dalle-post:image-2.png?hideShadow)
 
 # Mood-Based
 
 Next up, I wanted to get ChatGPT to give me a prompt based on a specific mood. I tried "what's a scary image generation prompt for dall-e 2"
 
-![A dark and desolate forest, with twisted and gnarled trees, and the faint sound of eerie laughter echoing in the distance.](dalle-post:image-3.png)
+![A dark and desolate forest, with twisted and gnarled trees, and the faint sound of eerie laughter echoing in the distance.](dalle-post:image-3.png?hideShadow)
 
-![](dalle-post:image-4.png)
+![](dalle-post:image-4.png?hideShadow)
 
 # Preferences
 
 ChatGPT doesn't like to give out opinions. For example, if you ask "What's your favorite color?" you'll get a response like "I am an AI language model and do not have personal preferences such as a favorite color." Rather than a "favorite" prompt, I was able to get the system to give me an idea of what it thought was "cool" and "uncool."
 
-![](dalle-post:image-5.png)
+![](dalle-post:image-5.png?hideShadow)
 
-![](dalle-post:image-6.png)
+![](dalle-post:image-6.png?hideShadow)
 
 That's the second time we've seen a futuristic cityscape from ChatGPT. This question always yields a futuristic city when I ask it. Now, let's see what's _uncool_:
 
-![](dalle-post:image-7.png)
+![](dalle-post:image-7.png?hideShadow)
 
-![](dalle-post:image-8.png)
+![](dalle-post:image-8.png?hideShadow)
 
 Sounds like ChatGPT hopes remote work is here to stay!
 
@@ -49,7 +49,7 @@ ChatGPT doesn't respond to "what do you look like" due to having no physical app
 
 This was slightly too long for DALL·E 2, so I had to take off the end, but I still could keep most of the prompt intact.
 
-![](dalle-post:image-10.png)
+![](dalle-post:image-10.png?hideShadow)
 
 # Conclusion
 
