add dates to file

--- a/src/posts/chatgpt-writes-poems-about-the-internet.mdx
+++ b/src/posts/chatgpt-writes-poems-about-the-internet.mdx
@@ -4,6 +4,7 @@ export const tags = ["software", "ai"];
 export const description =
   "I asked ChatGPT to write poems about various concepts in networking.";
 export const cover = "chatgpt-poem-cover.png";
+export const published = new Date(2022, 11, 2);
 
 Networking concepts can be tricky! Open AI's [ChatGPT](https://chat.openai.com/ "ChatGPT") has been making waves with demonstrations where the tool is used to explain complex topics, but rather than simple explanations, here are some poems the tool generated about various topics relating to networking and the internet (you can see the [prompts](#prompts "Prompts Used") I used at the end):
 
@@ -17,8 +18,6 @@ Routing traffic, far and wide
 
 Ensuring data reaches its destination in time
 
-
-
 With its tables and prefixes and AS numbers, oh my!
 
 BGP works tirelessly, never taking a break
@@ -26,8 +25,6 @@ BGP works tirelessly, never taking a break
 Exchanging information, constantly updating
 
 To ensure that every packet finds its way
-
-
 
 It may seem complex, but its job is quite simple
 
@@ -47,8 +44,6 @@ Helping us navigate the vast expanse of the internet
 
 With speed and efficiency, our searches are met
 
-
-
 From the root servers down to the local DNS cache
 
 Each query is resolved with precision and grace
@@ -67,8 +62,6 @@ No need to worry or stress
 
 Your internet usage is a success
 
-
-
 Your IP address is hidden away
 
 So hackers can't come out to play
@@ -76,8 +69,6 @@ So hackers can't come out to play
 Your privacy is secure and tight
 
 With a VPN, all is right
-
-
 
 So if you want to browse with ease
 
@@ -97,8 +88,6 @@ That's where SSL comes in
 
 To keep our secrets and not sin
 
-
-
 Encryption strong, protects us all
 
 From hackers who might want to bawl
@@ -106,8 +95,6 @@ From hackers who might want to bawl
 No more worries, no more fears
 
 With SSL, our data stays clear
-
-
 
 So let us all embrace
 
@@ -127,8 +114,6 @@ Into your database, seeking a way,
 
 To steal your data and make you pay.
 
-
-
 It starts with a simple query,
 
 That seems harmless, nothing to see,
@@ -136,8 +121,6 @@ That seems harmless, nothing to see,
 But hidden within its code,
 
 Is a malicious intent, unbeknownst to the load.
-
-
 
 It slips past your defenses,
 
@@ -147,8 +130,6 @@ Inserting its own commands,
 
 And wreaking havoc on your lands.
 
-
-
 It digs deep into your database,
 
 And starts to manipulate and erase,
@@ -156,8 +137,6 @@ And starts to manipulate and erase,
 Your valuable information,
 
 Leaving you vulnerable and defenseless, in a state of consternation.
-
-
 
 But fear not, my dear friend,
 
@@ -167,8 +146,6 @@ Against this sneaky attack,
 
 With proper security, you can fight back.
 
-
-
 Keep your database secure,
 
 And regularly check and ensure,
@@ -176,8 +153,6 @@ And regularly check and ensure,
 That no malicious queries,
 
 Have made their way through your defenses.
-
-
 
 Be vigilant and cautious,
 
