--- a/src/posts/my-connected-fitness-tools-part-2.mdx
+++ b/src/posts/my-connected-fitness-tools-part-2.mdx
@@ -4,6 +4,7 @@ export const tags = ["fitness", "hobby"];
 export const description =
   "After a year of using my connected fitness tools, a second look at what's new and what I changed!";
 export const cover = "fitness-2-cover.png?hideShadow";
+export const published = new Date(2022, 9, 10);
 
 It's been nearly one year since I wrote [**"A Look Into My Connected Fitness Tools"**](https://keegandonley.com/blog/my-approach-to-connected-fitness "A Look Into My Connected Fitness Tools"), in which I talked in detail about the fitness tech I use and how it integrates into my life. It's been one of my most popular posts to date, however, a lot has changed since then! In this follow-up post, I'll explain what I'm doing differently now, what I learned, and some things that didn't work as well as I'd hoped!
 
