--- a/src/posts/statically-generating-twitter-embeds-and-sharing-for-a-performance-boost.mdx
+++ b/src/posts/statically-generating-twitter-embeds-and-sharing-for-a-performance-boost.mdx
@@ -16,6 +16,7 @@ export const tags = [
 export const description =
   "Embedded Tweets and share buttons were bogging down my blog, so I wrote custom UI that is statically generated using the Twitter API to speed things back up";
 export const cover = "twitter-api-cover.png";
+export const published = new Date(2022, 9, 11);
 
 > <FontAwesomeIcon icon={faCircleExclamation} /> After the [changes to the Twitter
 > API Policy](https://twitter.com/TwitterDev/status/1641222783601631233), this post
