--- a/src/posts/welcome-to-my-new-blog.mdx
+++ b/src/posts/welcome-to-my-new-blog.mdx
@@ -6,6 +6,7 @@ export const slug = "welcome-to-my-new-blog";
 export const cover = "blog-launch-cover.png";
 export const description =
   "After months of work, my new website is live and available to all!";
+export const published = new Date(2023, 4, 31);
 
 This is an entirely new website built from the ground-up using many modern technologies and frameworks.
 In this post I'm going to dive into how it's built! I wrote this blog post over the course of
