add testing post and table support in mdx

--- a/src/posts/template.mdx
+++ b/src/posts/template.mdx
@@ -3,3 +3,4 @@ export const slug = "slug";
 export const tags = ["javascript"];
 export const description = "Description";
 export const cover = "cover";
+export const published = new Date(yyyy, mm, dd);
