try to add an image modal

--- a/src/posts/my-approach-to-connected-fitness.mdx
+++ b/src/posts/my-approach-to-connected-fitness.mdx
@@ -1,5 +1,5 @@
 export const title = "A Look Into My Connected Fitness Tools";
-export const slug = "slug";
+export const slug = "my-approach-to-connected-fitness";
 export const tags = ["fitness", "hobby"];
 export const description =
   'How I spent the last 2 years building a fitness regimen around "smart" fitness technology';
