add link shortener

--- a/src/posts/a-quick-look-at-openai-dall-e-2.mdx
+++ b/src/posts/a-quick-look-at-openai-dall-e-2.mdx
@@ -2,9 +2,10 @@ export const title = "My First Day With OpenAI's DALL·E 2";
 export const slug = "a-quick-look-at-openai-dall-e-2";
 export const tags = ["software", "ai", "DALL-E 2"];
 export const description =
-  " A look into my first day with OpenAI's DALLE-2 image generation system";
+  "A look into my first day with OpenAI's DALLE-2 image generation system";
 export const cover = "openai-cover.png";
 export const published = new Date(2022, 4, 22);
+export const shortCodes = ["dalle"];
 
 This weekend I was lucky enough to get access to [OpenAI's new DALL·E 2 system](https://openai.com/dall-e-2/ "DALL·E 2"), which is able to generate realistic images from natural text inputs.
 
