change cover for optional chaining

--- a/src/posts/optional-chaining.mdx
+++ b/src/posts/optional-chaining.mdx
@@ -3,7 +3,7 @@ export const slug = "the-downside-of-optional-chaining-overuse";
 export const tags = ["javascript", "software"];
 export const description =
   "Optional chaining is one of my favorite javascript operators (if such a thing exists), but it's best to avoid using it when not necessary.";
-export const cover = "optional-chaining-cover.png";
+export const cover = "optional-chaining-orange-cover.png";
 export const published = new Date(2023, 2, 16);
 
 Optional chaining is a pattern I rely on daily to write clear, maintainable, and stable code. Before I get into the risks of over-use, here's a quick refresher:
