add react interview post

--- a/src/posts/template.mdx
+++ b/src/posts/template.mdx
@@ -4,3 +4,4 @@ export const tags = ["javascript"];
 export const description = "Description";
 export const cover = "cover";
 export const published = new Date(yyyy, mm, dd);
+export const shortCodes = ["code"];
