finish gallery work

--- a/src/posts/trip-to-europe-part-i-barcelona.mdx
+++ b/src/posts/trip-to-europe-part-i-barcelona.mdx
@@ -1,3 +1,5 @@
+import { Gallery } from "../components/Gallery";
+
 export const title = "Trip to Europe Part I: Barcelona";
 export const slug = "trip-to-europe-part-i-barcelona";
 export const tags = ["travel", "hobby", "photography"];
@@ -6,6 +8,7 @@ export const description =
 export const cover = "barcelona-cover.png";
 export const published = new Date(2022, 3, 16);
 export const shortCodes = ["barcelona"];
+export const galleryBucket = "barcelona";
 
 I write a lot on this blog about software, work, and my hobbies, but one thing I haven't had the opportunity to write about yet is one of my favorite past times - traveling. After a long hiatus due to the COVID-19 pandemic, Jully and I were finally able to take a trip to Europe, something neither of us had been able to do for years. I've never wanted my blog to be about just one topic, so I figured this was a good time to switch gears and write a bit about our trip, and what we learned traveling during these times.
 
@@ -96,3 +99,5 @@ There are more works to see by Gaudí around Catalonia but these were the three 
 ![](barcelona-post:image-10.png)
 
 [**Hemingway Gin and Cocktails**](http://hemingwaybcn.com/ "Hemingway Barcelona") is a very fun basement bar with amazing cocktails - these were by far the best we had on the trip. Each one was so unique - like the espresso martini pictured above (left) and the other cocktails.
+
+<Gallery gallery="barcelona" />
