--- a/src/posts/deciding-on-a-custom-template-for-bootstrapping-nextjs-apps.mdx
+++ b/src/posts/deciding-on-a-custom-template-for-bootstrapping-nextjs-apps.mdx
@@ -4,7 +4,7 @@ export const slug =
 export const tags = ["react", "software", "hobby", "open source", "frontend"];
 export const description =
   "There are many different starter templates out there for NextJS, but I wanted to evaluate all my past projects and create the perfect one for bootstrapping future projects.";
-export const cover = "nextjs-template-cover.png";
+export const cover = "nextjs-template-leaves-cover.png";
 export const published = new Date(2021, 11, 6);
 export const shortCodes = ["bootstrapping", "nextjs-template"];
 
