--- a/src/posts/building-a-super-simple-and-free-twitter-bot.mdx
+++ b/src/posts/building-a-super-simple-and-free-twitter-bot.mdx
@@ -14,6 +14,7 @@ export const description =
   "How to build a simple Twitter bot and run it for free on a Raspberry Pi";
 export const cover = "twitter-bot-cover.png";
 export const published = new Date(2022, 7, 9);
+export const shortCodes = ["twitter-bot"];
 
 > <FontAwesomeIcon icon={faCircleExclamation} /> After the [changes to the Twitter
 > API Policy](https://twitter.com/TwitterDev/status/1641222783601631233), some things
