--- a/src/posts/common-types-of-web-application-tests-and-how-they-can-improve-performance-and-reliability.mdx
+++ b/src/posts/common-types-of-web-application-tests-and-how-they-can-improve-performance-and-reliability.mdx
@@ -7,6 +7,7 @@ export const description =
   "Testing web applications is a crucial part of the development process, but it can be daunting at first. I break down the different types of web application testing I rely on, and how they can be useful to you!";
 export const cover = "testing-code-cover.png";
 export const published = new Date(2022, 8, 22);
+export const shortCodes = ["testing", "web-app-testing", "app-testing"];
 
 Testing web applications is a crucial part of the development process, but it can be daunting at first. There are so many terms to learn! What's an end-to-end test? A unit test? What's synthetic monitoring? Do I even need to do all of these?
 
