--- a/src/posts/debugging-code-using-git-bisect.mdx
+++ b/src/posts/debugging-code-using-git-bisect.mdx
@@ -5,6 +5,7 @@ export const description =
   "A step-by-step guide to one of my favorite tools in my debugging toolkit";
 export const cover = "git-bisect-cover.png";
 export const published = new Date(2022, 4, 9);
+export const shortCodes = ["bisect", "git-bisect", "debugging-superpower"];
 
 Imagine this situation: A part of a large application you haven't looked at in a while has a regression - maybe it's something minor like a drop-down that no longer works. You're sure it _used_ to work, but there have been hundreds or thousands of commits to the project by various developers since then. How do you go about tracking down when the bug was introduced? If it wasn't caught in regression testing the moment it was broken, this can be a daunting task!
 
