--- a/src/posts/getting-the-most-out-of-in-person-tech-conferences.mdx
+++ b/src/posts/getting-the-most-out-of-in-person-tech-conferences.mdx
@@ -5,6 +5,7 @@ export const description =
   "Tech conferences are a ton of fun, but can be daunting as well! Let's dive in to how to get the most out of them, and what I learned from my first conference post-COVID.";
 export const cover = "conference-cover.png";
 export const published = new Date(2022, 5, 15);
+export const shortCodes = ["conferences"];
 
 Earlier this month, I spent 4 days at [Render Atlanta](https://www.renderatl.com/ "Render Website"), and if you follow me on Twitter [I'm](https://twitter.com/keegandonley/status/1532836782345166854 "Render Dinner") [sure](https://twitter.com/keegandonley/status/1532148572317261826 "Render Music") [you](https://twitter.com/keegandonley/status/1532439569806807055 "Post Tweet") [noticed](https://twitter.com/keegandonley/status/1532484939513581592 "Rain Tweet") that it was a little different than other conferences. Tons of good food, drinks, music and people made this the most fun conference I've been to! It had been nearly 3 years since I went to an in-person conference due to the COVID-19 pandemic, so I was a little rusty on how I should approach networking, attending talks, and just trying to get the most out of it overall! These are the things I learned and tactics I used to make sure I took advantage of every moment!
 
