--- a/src/posts/happy-holidays-22.mdx
+++ b/src/posts/happy-holidays-22.mdx
@@ -5,6 +5,7 @@ export const description =
 export const tags = [];
 export const cover = "holidays-2022-cover.png";
 export const published = new Date(2022, 11, 23);
+export const shortCodes = ["holidays-2022"];
 
 Happy holidays! 2022 is almost over, and it's been a fantastic year! There were a lot of changes as I started a new role as a senior front-end engineer at [Kizen](/blog/beginning-a-new-chapter-of-my-career-with-kizen "Kizen Announcement"). This was the first full year I was operating my blog, and I had the opportunity to write about lots of topics that are interesting to me, from [fitness](/blog/my-connected-fitness-tools-part-2 "Fitness Part 2") to [debugging software](/blog/debugging-code-using-git-bisect "Debug with Git Bisect") to [recent innovations in AI](/blog/a-quick-look-at-openai-dall-e-2 "DALL-E 2 Intro").
 
