--- a/src/posts/how-ai-is-revolutionizing-personal-brand-creation.mdx
+++ b/src/posts/how-ai-is-revolutionizing-personal-brand-creation.mdx
@@ -9,6 +9,7 @@ export const description =
   "A dive into the many innovative tools and platforms that leverage AI, and how they are making it easier than ever to create content and build a personal brand.";
 export const cover = "ai-brand-cover.png";
 export const published = new Date(2022, 7, 31);
+export const shortCodes = ["ai-brand", "ai-revolution"];
 
 My personal brand has become a much larger focus for me over the last few months. Most of this work revolves around this website - its goal is to allow you to get to know me and what I'm passionate about through blog posts, books I've read, music I listen to, and photography. I maintain [my blog](https://keegandonley.com/blog "Blog | Keegan Donley") and a [reading list](https://keegandonley.com/library "Reading List | Keegan Donley") of my favorite books. More recently I've even started writing about [vinyl records](https://keegandonley.com/vinyl/Ondekoza "Vinyl | Keegan Donley") that I find interesting or have a unique story. My website has also become a place for [personalized landing pages](https://keegandonley.com/render "Render | Keegan Donley") during events, a [self-hosted resume](https://keegandonley.com/resume "Resume"), and a one-stop shop for all [my social media links](https://keegandonley.com/ "Home | Keegan Donley"). This is all tied together with a custom URL shortening service I built, [k10y.com](https://k10y.com "k10y short link").
 
