--- a/src/posts/maintaining-a-culture-of-confident-energized-and-successful-engineers.mdx
+++ b/src/posts/maintaining-a-culture-of-confident-energized-and-successful-engineers.mdx
@@ -13,6 +13,7 @@ export const description =
   "My thoughts based on conversations with fellow engineers at RenderATL about imposter syndrome, success metrics, and confidence in a role.";
 export const cover = "dev-culture-cover.png";
 export const published = new Date(2022, 5, 2);
+export const shortCodes = ["culture"];
 
 I'm spending the week at [Render Atlanta](https://www.renderatl.com/ "Render Atlanta"), a large tech conference that draws people from all over the world and all levels of experience. It's been an amazing opportunity to meet like-minded engineers from so many diverse background and talk about the things that matter to us in our field.
 
