--- a/src/posts/my-approach-to-connected-fitness.mdx
+++ b/src/posts/my-approach-to-connected-fitness.mdx
@@ -5,6 +5,7 @@ export const description =
   'How I spent the last 2 years building a fitness regimen around "smart" fitness technology';
 export const cover = "connected-fitness-cover.jpg";
 export const published = new Date(2021, 9, 22);
+export const shortCodes = ["fitness"];
 
 In early 2020, right as things started to shut down due to COVID-19, I decided I wanted to get back into shape and figured with all the lockdowns it was a good time to start. I've always been very data-motivated in my decisions, so of course I couldn't just start casually exercising. I needed to complicate the process with a bunch of technology and software as I so often do. Now that I've settled on a routine I figured I'd write up all the lessons I learned and cover the software and hardware that drives my fitness regimen.
 
