--- a/src/posts/optional-chaining.mdx
+++ b/src/posts/optional-chaining.mdx
@@ -5,6 +5,7 @@ export const description =
   "Optional chaining is one of my favorite javascript operators (if such a thing exists), but it's best to avoid using it when not necessary.";
 export const cover = "optional-chaining-orange-cover.png";
 export const published = new Date(2023, 2, 16);
+export const shortCodes = ["optional-chaining", "optional-chaining-dangers"];
 
 Optional chaining is a pattern I rely on daily to write clear, maintainable, and stable code. Before I get into the risks of over-use, here's a quick refresher:
 
