--- a/src/posts/oura-ring-generation-3-first-impressions.mdx
+++ b/src/posts/oura-ring-generation-3-first-impressions.mdx
@@ -1,11 +1,11 @@
 export const title = "Oura Ring Generation 3 First Impressions";
 export const slug = "oura-ring-generation-3-first-impressions";
-export const tags = ["javascript"];
+export const tags = ["fitness", "gadget", "hobby"];
 export const description =
   "A first look at my new third generation ring from Oura";
 export const cover = "oura-cover.png";
 export const published = new Date(2021, 11, 10);
-export const shortCodes = ["fitness", "gadget", "hobby"];
+export const shortCodes = ["oura", "oura-3"];
 
 It's been no secret that I'm a big fan of the Oura ring for sleep tracking. I talked quite a bit about the second generation ring in [my post about connected fitness](https://keegandonley.com/blog/my-approach-to-connected-fitness "Connected Fitness"). I finally got my hands of the new third generation ring, and wanted to provide some insight into my first impressions and thoughts. The ring arrived in the mail first thing in the morning, so I'll have a chance to evaluate the daytime features first, which the Oura 2 didn't have, and then I'll be able to compare the sleep tracking and other night time features as I start to sleep with the new ring on.
 
