--- a/src/posts/review-your-own-pull-requests.mdx
+++ b/src/posts/review-your-own-pull-requests.mdx
@@ -5,6 +5,7 @@ export const description =
 export const tags = ["software", "opinion", "career"];
 export const cover = "review-prs-cover.png";
 export const published = new Date(2023, 0, 20);
+export const shortCodes = ["review-code", "review-prs", "review-pull-requests"];
 
 I was recently asked for my advice on writing quality code that gets through code review on the first try and how to avoid that dreaded "changes requested" notification that's always somehow right as you're ending your day. This is some of the best advice I can give: pretend you're the developer reviewing your code and go through the entire process yourself before even considering having someone else review it.
 
