--- a/src/posts/trip-to-europe-part-ii-lisbon.mdx
+++ b/src/posts/trip-to-europe-part-ii-lisbon.mdx
@@ -5,6 +5,7 @@ export const description =
   "After years of not being able to travel, I discuss a bit about the trip Jully and I took to the Iberian Peninsula, this week with our stop in Lisbon, Portugal.";
 export const cover = "lisbon-cover.png";
 export const published = new Date(2022, 6, 1);
+export const shortCodes = ["lisbon"];
 
 > This is part two of a three-part series based on this trip. We visited Barcelona, Lisbon, and Madrid on our vacation, so this second part will be all about Lisbon. Start with [part one](https://keegandonley.com/blog/trip-to-europe-part-i-barcelona "Trip to Europe Part 1") if you missed it!
 
