--- a/src/posts/using-ai-to-generate-dall-e-2-prompts.mdx
+++ b/src/posts/using-ai-to-generate-dall-e-2-prompts.mdx
@@ -5,6 +5,7 @@ export const description =
   "Using ChatGPT to generate prompts that can be fed into DALL·E 2 to generate images";
 export const cover = "ai-generated-prompts-cover.png?hideShadow";
 export const published = new Date(2022, 11, 5);
+export const shortCodes = ["gpt-dalle", "ai-prompts"];
 
 There's another exciting tool from [OpenAI](https://openai.com/ "OpenAI") out, and like DALL·E 2, I've been playing with this new one as well. It's called [ChatGPT](https://chat.openai.com/chat "ChatGPT") and is an AI system for chat dialog. After playing around with it for a while, I wanted to see if I could use it to generate [prompts for DALL·E 2](https://website-2-0-git-develop-kdonley.vercel.app/blog/a-quick-look-at-openai-dall-e-2 "DALL-E 2"). Here are the results!
 
