--- a/src/posts/why-write-a-newsletter.mdx
+++ b/src/posts/why-write-a-newsletter.mdx
@@ -5,6 +5,7 @@ export const description =
   "I recently started a newsletter - it's a bit of extra work every month, but here's why I think it's valuable.";
 export const cover = "newsletter-cover.png";
 export const published = new Date(2022, 9, 4);
+export const shortCodes = ["why-newsletter"];
 
 Recently I started [my newsletter](https://www.getrevue.co/profile/keegandonley "Revue Profile") that I aim to send out monthly. It contains a roll-up of the various posts from the month, as well as music I find interesting, and any books I finished off [my reading list](https://keegandonley.com/library "Reading List"). It doesn't take too much work, but it does take up to a couple of hours at the end of the month to curate what I want to send out and write any additional content for the newsletter.
 
