--- a/src/posts/chatgpt-writes-poems-about-the-internet.mdx
+++ b/src/posts/chatgpt-writes-poems-about-the-internet.mdx
@@ -5,6 +5,7 @@ export const description =
   "I asked ChatGPT to write poems about various concepts in networking.";
 export const cover = "chatgpt-poem-cover.png";
 export const published = new Date(2022, 11, 2);
+export const shortCodes = ["internet-poems", "gpt-poems"];
 
 Networking concepts can be tricky! Open AI's [ChatGPT](https://chat.openai.com/ "ChatGPT") has been making waves with demonstrations where the tool is used to explain complex topics, but rather than simple explanations, here are some poems the tool generated about various topics relating to networking and the internet (you can see the [prompts](#prompts "Prompts Used") I used at the end):
 
