add final shortcode

--- a/src/posts/beginning-a-new-chapter-of-my-career-with-kizen.mdx
+++ b/src/posts/beginning-a-new-chapter-of-my-career-with-kizen.mdx
@@ -5,6 +5,7 @@ export const description =
   "After nearly 5 years with Pinpoint, it's time for me to move into a senior frontend engineering role at Kizen!";
 export const cover = "kizen-cover.png";
 export const published = new Date(2021, 11, 31);
+export const shortCodes = ["kizen"];
 
 I'm approaching the 5-year mark of my time with [Pinpoint](https://pinpoint.com/ "Pinpoint"), during which I got to work on everything from [embeddable mini-apps](https://www.producthunt.com/posts/pinpoint-profile-for-developers "Pinpoint Profile"), mobile & desktop apps, [complex web applications](https://www.producthunt.com/posts/pinpoint-4 "Pinpoint - ProductHunt"), and marketing websites & blogs, to name just a few projects. I've worked for Pinpoint in 5 different offices and 2 states, and spent some time working from home. It's been an amazing role for me to grow and learn, and discover what path I want my career to take.
 
