add some more books

--- a/src/books/template.mdx
+++ b/src/books/template.mdx
@@ -11,3 +11,4 @@ export const medium = "Kindle";
 export const isbn = "9781328745613";
 export const goodreads = "goodreadsUrl";
 export const rating = 0;
+export const purchaseLocation = "Location";
